--- a/src/partials/contents/index-page/style.scss
+++ b/src/partials/contents/index-page/style.scss
@@ -2,24 +2,55 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-bottom: 2.5rem;
     > * {
         display: inherit;
         gap: 0 2rem;
         justify-content: space-evenly;
         padding: 2.5rem 0 0;
-        &.cta { margin: 2rem 0 }
+        &.cta {
+            flex-wrap: wrap;
+            gap: 2rem;
+            margin: 2rem 0;
+            button {
+                align-items: center;
+                border: none;
+                cursor: inherit;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                font-size: 1.5rem;
+                gap: 0.5rem 1rem;
+                justify-content: center;
+                span { display: block }
+            }
+        }
     }
     .hero > .image { max-width: 32rem }
-    .cta button {
-        align-items: center;
-        border: none;
-        cursor: inherit;
+    &-relations {
+        background: var( --background-color-mild );
         display: flex;
-        flex-direction: column;
         flex-wrap: wrap;
-        font-size: 1.5rem;
-        gap: 0.5rem 1rem;
-        justify-content: center;
-        span { display: block }
+        gap: 2rem;
+        margin: 0 -1.5rem;
+        padding: 4rem;
+        > * {
+            flex: 1 0;
+            @media ( max-width: 991px ) {
+                flex-basis: 40%;
+            }
+            @media ( max-width: 575px ) {
+                flex-basis: 100%;
+            }
+        }
+        .tile {
+            .icon-div,
+            .title-div { 
+                text-align: center
+            }
+            .icon-div > * {
+                font-size: 96px;
+            }
+        }
     }
 }
