--- a/src/partials/site-body/style.scss
+++ b/src/partials/site-body/style.scss
@@ -1,15 +1,12 @@
-:root { --sbsider-bg: #f7f7f7 }
-.dark { --sbsider-bg: var( --background-color ) }
 .site-body {
     display: flex;
-    padding: 0 0.5rem;
     main {
         flex: 1 1 40rem;
         max-height: 66rem;
         min-width: 20rem;
         overflow-x: hidden;
         overflow-y: auto;
-        padding: 0 1rem 2rem;
+        padding: 0 1.5rem;
     }
     .site-faqs {
         @media ( max-width: 1399px ) {
@@ -25,7 +22,7 @@
         }
     }
     &-sider {
-        background: var( --sbsider-bg );
+        background: var( --background-color-mild );
         border: none;
         border-right: 1px solid var( --border-color );
         padding: 0.5rem;
