--- a/src/partials/site-footing/style.scss
+++ b/src/partials/site-footing/style.scss
@@ -1,7 +1,7 @@
 .site-footing {
     background-color: var( --blackie );
     border: none;
-    border-top: 2px solid var( --yellow );
+    border-top: 2px solid var( --pink );
     color: var( --gray );
     padding: 0.5rem;
     a { color: var( --gray ) }
