--- a/src/partials/site-body/style.scss
+++ b/src/partials/site-body/style.scss
@@ -7,6 +7,9 @@
         overflow-x: hidden;
         overflow-y: auto;
         padding: 0 1.5rem;
+        .page-main {
+            padding-bottom: 2.5rem;
+        }
     }
     .site-faqs {
         @media ( max-width: 1399px ) {
