--- a/src/partials/contents/index-page/style.scss
+++ b/src/partials/contents/index-page/style.scss
@@ -11,10 +11,10 @@
             flex-wrap: wrap;
             gap: 2rem;
             margin: 2rem 0;
-            button {
+            a {
                 align-items: center;
                 border: none;
-                cursor: inherit;
+                cursor: pointer;
                 display: flex;
                 flex-direction: column;
                 flex-wrap: wrap;
