shared updates - wip

--- a/src/partials/site-footing/style.scss
+++ b/src/partials/site-footing/style.scss
@@ -33,6 +33,7 @@
                 text-align: right;
             }
             .wk-logo {
+                height: 0.625rem;
                 vertical-align: baseline;
                 width: 4rem
             }
