--- a/src/partials/site-body/style.scss
+++ b/src/partials/site-body/style.scss
@@ -1,3 +1,6 @@
+:root { --sbsider-bg: var( --background-color-mild ) }
+.dark { --sbsider-bg: var( --background-color ) }
+
 .site-body {
     display: flex;
     main {
@@ -7,6 +10,7 @@
         overflow-x: hidden;
         overflow-y: auto;
         padding: 0 1.5rem;
+        scroll-behavior: smooth;
         .page-main {
             padding-bottom: 2.5rem;
         }
@@ -20,12 +24,14 @@
         justify-content: flex-end;
         margin-top: 5px;
         text-align: right;
+        // @debug
+        // @media ( max-width: 936px ) {
         @media ( min-width: 836px ) {
             display: none;
         }
     }
     &-sider {
-        background: var( --background-color-mild );
+        background: var( --sbsider-bg );
         border: none;
         border-right: 1px solid var( --border-color );
         padding: 0.5rem;
