sider bar elistment

--- a/src/partials/site-heading/style.scss
+++ b/src/partials/site-heading/style.scss
@@ -1,5 +1,6 @@
 :root { --shbg: var( --skye ) }
 .dark { --shbg: var( --midnight ) }
+
 .site-heading {
     background: var( --shbg );
     border-bottom: 1px solid;
@@ -12,38 +13,8 @@
         justify-content: flex-end;
         gap: 2rem;
         padding-right: 0.5rem;
-        @media ( max-width: 596px ) {
-            display: none !important;
-        }
     }
-    a {
-        color: var( --color );
-        a:hover {
-            opacity: 0.8;
-        }
-        &.link-0 {
-            @media ( max-width: 845px ) {
-                display: none;
-            }
-        }
-        &.link-1 {
-            @media ( max-width: 1115px ) {
-                display: none;
-            }
-        }
-        &.link-2 {
-            @media ( max-width: 1225px ) {
-                display: none;
-            }
-        }
-    }
-    .site-tags {
-        // @debug
-        // @media ( max-width: 935px ) {
-        @media ( max-width: 835px ) {
-            display: none;
-        }
-    }
+    .nav-minor a { color: var( --color ) }
     &, & > :not( .sider-toggle-btn ) {
         align-items: center;
         display: flex;
@@ -56,17 +27,12 @@
         color: var( --white );
         display: block;
         flex: 0 0 2rem;
-        @media ( min-width: 992px ) { 
-            display: none;
-        }
         > * { font-size: 1rem }
-     }
+    }
     .sider-toggle-btn,
     .branding,
     .logo,
-    .pkg-title {
-        height: var( --top-height );
-    }
+    .pkg-title { height: var( --top-height ) }
     .branding {
         padding: 0 1.25rem;
         width: 32rem;
@@ -97,7 +63,5 @@
             font-variant: normal;
         }
     }
-    .dark-mode-settings {
-        margin-right: 1rem;
-    }
+    .dark-mode-settings { margin-right: 1rem }
 }
