--- a/src/partials/site-body/style.scss
+++ b/src/partials/site-body/style.scss
@@ -3,6 +3,7 @@
 
 .site-body {
     display: flex;
+    overflow-x: hidden;
     main {
         flex: 1 1 40rem;
         max-height: 66rem;
@@ -15,19 +16,60 @@
             padding-bottom: 2.5rem;
         }
     }
-    .site-faqs {
+    .aux-sider {
         @media ( max-width: 1399px ) {
-            display: none;
+            border: 1px solid var( --border-color );
+            border-right-width: 0;
+            border-top-width: 0;
+            margin-top: 1px;
+            position: absolute;
+            right: 0;
+            width: 25rem;
+        }
+        @media ( max-width: 575px ) {
+            background: var( --background-color );
+            border-width: 0;
+            border-bottom-width: 1px;
+            width: 100%;
+        }
+        .close {
+            background: transparent;
+            border: 0;
+            color: var( --color );
+            cursor: pointer;
+            outline: none;
+            position: absolute;
+            right: -0.5rem;
+            top: 0;
+        }
+        .nav-minor {
+            justify-content: flex-end;
+            padding: 1rem 2.5rem 1rem 1.25rem;
+            @media ( max-width: 1225px ) {
+                background: var( --sbsider-bg );
+                border-bottom: 1px dashed var( --border-color );
+            }
+            @media ( max-width: 353px ) {
+                > * {  padding: 0.5rem 0.25rem  }
+            }
+            a {
+                display: none;
+                font-weight: 700;
+            }
         }
     }
-    .site-tags {
+    .tags-area {
+        align-items: center;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 1rem;
+        height: 2rem;
         justify-content: flex-end;
-        margin-top: 5px;
-        text-align: right;
-        // @debug
-        // @media ( max-width: 936px ) {
-        @media ( min-width: 836px ) {
+        > .aux-sider-toggle-btn {
             display: none;
+            margin-right: -0.75rem;
+            .anticon-more { font-size: 1.8rem }
+            .anticon-shrink { font-size: 1.35rem }
         }
     }
     &-sider {
@@ -35,8 +77,6 @@
         border: none;
         border-right: 1px solid var( --border-color );
         padding: 0.5rem;
-        &.closed {
-            display: none;
-        }
+        &.closed { display: none }
     }
 }
